@@ -28,11 +28,13 @@
 #define CHARGING_SLOT_NUM 20
 #define CHARGING_SLOT_DEFAULT_NUM (CHARGING_SLOT_NUM - 2)
 
-#define CHARGING_SLOT_INCOMING_CABLE 0
-#define CHARGING_SLOT_OUTGOING_CABLE 1
-#define CHARGING_SLOT_INPUT0         2
-#define CHARGING_SLOT_INPUT1         3
-#define CHARGING_SLOT_BUTTON         4
+#define CHARGING_SLOT_INCOMING_CABLE  0
+#define CHARGING_SLOT_OUTGOING_CABLE  1
+#define CHARGING_SLOT_INPUT0          2
+#define CHARGING_SLOT_INPUT1          3
+#define CHARGING_SLOT_BUTTON          4
+#define CHARGING_SLOT_LOAD_MANAGEMENT 7
+#define CHARGING_SLOT_EXTERNAL        8
 
 typedef struct {
 	uint16_t max_current_default[CHARGING_SLOT_DEFAULT_NUM];
