@@ -98,3 +98,4 @@
 
 TBD: 2.1.13 (TBD):
 - Remove "charging time" and add "car stopped charging"
+- Set external charging slot to enabled with 32A on first boot of 2.1.13
